file name changed

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="menu">
                 <div>
                     <ul>
-                        <li><a href="Newsindex.html" class="current">Home</a></li>
-                        <li><a href="Newsabout.html">About</a></li>
+                        <li><a href="index.html" class="current">Home</a></li>
+                        <li><a href="about.html">About</a></li>
                     </ul>
                 </div>
             </div>
