--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
             <div class="menu">
                 <div>
                     <ul>
-                        <li><a href="Newsindex.html">Home</a></li>
-                        <li><a href="Newsabout.html" class="current">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html" class="current">About</a></li>
                     </ul>
                 </div>
             </div>
