--- a/article.html
+++ b/article.html
@@ -116,8 +116,8 @@
             <div>
                 <h3>Email News</h3>
                 <p>Update you daily. One step Ahead to enter your email</p>
-                <form>
-                    <input type="email" placeholder="Enter a email...">
+                <form name="contact" method="POST" data-netlify="true">
+                    <input type="email" name="email" placeholder="Enter a email...">
                     <input type="submit" value="Subcribe" class="btn btn-primary">
                 </form>
             </div>
